Fix space between header and function sidebar on mobile

--- a/src/stylesheets/components/_functions-sidebar-responsive.scss
+++ b/src/stylesheets/components/_functions-sidebar-responsive.scss
@@ -13,6 +13,7 @@
       background: $light-secondary-color;
       position: absolute;
       z-index: 200;
+      margin: -15px 0 0 0;
     }
   }
 }
